--- a/Create_protokol/app/src/main/res/layout/activity_room_element.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_room_element.xml
@@ -8,71 +8,70 @@
     tools:context=".RoomElementActivity"
     tools:layout_editor_absoluteY="25dp">
 
-    <AutoCompleteTextView
-        android:id="@+id/actv1"
-        android:layout_width="320dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="47dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="11dp"
-        android:hint="Введите название комнаты"
-        app:layout_constraintBottom_toTopOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/image"
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="75dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="16dp"
+        android:text="Комната"
+        android:textColor="@color/text"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/actv1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="89dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="11dp"
+    <AutoCompleteTextView
+        android:id="@+id/actv1"
+        android:layout_width="0dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="111dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="41dp"
+        android:hint="Введите название комнаты"
         app:layout_constraintBottom_toTopOf="@+id/image1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/actv1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/arrow" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="57dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="53dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:background="#708ea9"
-        android:onClick="addRoom"
         android:text="Добавить комнату"
         android:textColor="@color/fon"
-        app:layout_constraintBottom_toTopOf="@+id/actv2"
+        app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/actv1" />
 
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="42dp"
         android:background="@color/text"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actv1" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="88dp"
+        android:layout_width="75dp"
         android:layout_height="25dp"
         android:text="Элемент"
         android:textColor="@color/text"
@@ -84,148 +83,154 @@
 
     <AutoCompleteTextView
         android:id="@+id/actv2"
-        android:layout_width="320dp"
+        android:layout_width="312dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="381dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:hint="Введите название элемента"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toStartOf="@+id/image1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <ImageView
         android:id="@+id/image1"
         android:layout_width="40dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="381dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/actv2"
-        app:layout_constraintTop_toBottomOf="@+id/image"
+        app:layout_constraintTop_toBottomOf="@+id/actv1"
         app:srcCompat="@mipmap/arrow" />
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="121dp"
-        android:layout_height="33dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="47dp"
+        android:layout_width="90dp"
+        android:layout_height="39dp"
+        android:layout_marginBottom="11dp"
+        android:layout_marginEnd="82dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="47dp"
+        android:layout_marginRight="82dp"
         android:layout_marginStart="16dp"
         android:text="З/НЗ"
         android:textColor="@color/text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/soprot"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kolvo" />
+        app:layout_constraintTop_toBottomOf="@+id/image1" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="94dp"
-        android:layout_height="43dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:text="Кол-во:"
         android:textColor="@color/text"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/kolvo"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/kolvo"
         app:layout_constraintStart_toEndOf="@+id/switch1"
-        app:layout_constraintTop_toTopOf="@+id/kolvo" />
+        app:layout_constraintTop_toBottomOf="@+id/actv2" />
 
     <EditText
         android:id="@+id/kolvo"
-        android:layout_width="94dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/switch1"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/actv2" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="94dp"
-        android:layout_height="43dp"
-        android:layout_marginLeft="184dp"
-        android:layout_marginStart="184dp"
-        android:text="R(Ом):"
-        android:textColor="@color/text"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/soprot"
-        app:layout_constraintEnd_toStartOf="@+id/soprot"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/soprot" />
-
-    <EditText
-        android:id="@+id/soprot"
-        android:layout_width="94dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/switch1" />
-
     <Button
         android:id="@+id/button2"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="17dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:background="#708ea9"
-        android:onClick="addEl"
         android:text="Добавить элемент"
+        android:textColor="@color/fon"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:background="#708ea9"
+        android:text="Просмотр"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/soprot" />
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <View
         android:id="@+id/view2"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="42dp"
+        android:layout_marginLeft="42dp"
+        android:layout_marginRight="42dp"
+        android:layout_marginStart="42dp"
         android:background="@color/text"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="9dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="25dp"
+        android:text="При завершении работы создайте PDF:"
+        android:textColor="@color/text"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="48dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:background="#708ea9"
         android:onClick="pdfApp"
-        android:text="Просмотр PDF"
+        android:text="Создать PDF"
         android:textColor="@color/fon"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </android.support.constraint.ConstraintLayout>
