--- a/Create_protokol/app/src/main/res/layout/activity_room_element.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_room_element.xml
@@ -10,38 +10,44 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="75dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="16dp"
-        android:text="Комната"
-        android:textColor="@color/text"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/actv1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <AutoCompleteTextView
-        android:id="@+id/actv1"
-        android:layout_width="0dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="111dp"
+        android:layout_width="350dp"
+        android:layout_height="35dp"
+        android:layout_marginBottom="2dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="41dp"
-        android:hint="Введите название комнаты"
-        app:layout_constraintBottom_toTopOf="@+id/image1"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:text="Комната не выбрана"
+        android:textColor="@color/text"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
+        android:id="@+id/button5"
+        android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:background="#708ea9"
+        android:text="Выбрать комнату"
+        android:textColor="@color/fon"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
@@ -49,30 +55,36 @@
         android:background="#708ea9"
         android:text="Добавить комнату"
         android:textColor="@color/fon"
-        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actv1" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <View
         android:id="@+id/view"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="1dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="42dp"
         android:layout_marginLeft="42dp"
         android:layout_marginRight="42dp"
         android:layout_marginStart="42dp"
+        android:layout_marginTop="20dp"
         android:background="@color/text"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="75dp"
-        android:layout_height="25dp"
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="151dp"
+        android:layout_marginLeft="153dp"
+        android:layout_marginRight="151dp"
+        android:layout_marginStart="153dp"
         android:text="Элемент"
         android:textColor="@color/text"
         android:textSize="18sp"
@@ -83,13 +95,14 @@
 
     <AutoCompleteTextView
         android:id="@+id/actv2"
-        android:layout_width="312dp"
-        android:layout_height="43dp"
-        android:layout_marginBottom="7dp"
+        android:layout_width="310dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:hint="Введите название элемента"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toStartOf="@+id/image1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -97,23 +110,24 @@
     <ImageView
         android:id="@+id/image1"
         android:layout_width="40dp"
-        android:layout_height="43dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/switch1"
+        android:layout_marginTop="57dp"
+        app:layout_constraintBottom_toTopOf="@+id/kolvo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/actv2"
-        app:layout_constraintTop_toBottomOf="@+id/actv1"
+        app:layout_constraintTop_toBottomOf="@+id/view"
         app:srcCompat="@mipmap/arrow" />
 
     <Switch
         android:id="@+id/switch1"
-        android:layout_width="90dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="11dp"
-        android:layout_marginEnd="82dp"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_marginEnd="97dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="82dp"
+        android:layout_marginRight="97dp"
         android:layout_marginStart="16dp"
         android:text="З/НЗ"
         android:textColor="@color/text"
@@ -121,13 +135,14 @@
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image1" />
+        app:layout_constraintTop_toBottomOf="@+id/actv2" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="65dp"
+        android:layout_height="35dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="16dp"
         android:text="Кол-во:"
         android:textColor="@color/text"
         android:textSize="18sp"
@@ -138,45 +153,47 @@
 
     <EditText
         android:id="@+id/kolvo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/actv2" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="0dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginBottom="10dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:background="#708ea9"
         android:text="Добавить элемент"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/switch1" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="0dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:background="#708ea9"
-        android:text="Просмотр"
+        android:text="Редактор"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -185,52 +202,36 @@
 
     <View
         android:id="@+id/view2"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="1dp"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="42dp"
         android:layout_marginLeft="42dp"
         android:layout_marginRight="42dp"
         android:layout_marginStart="42dp"
+        android:layout_marginTop="20dp"
         android:background="@color/text"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="0dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="9dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="25dp"
-        android:text="При завершении работы создайте PDF:"
-        android:textColor="@color/text"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
-
     <Button
         android:id="@+id/button3"
-        android:layout_width="0dp"
+        android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="40dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:background="#708ea9"
+        android:background="@color/textbutton"
         android:onClick="pdfApp"
         android:text="Создать PDF"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
 </android.support.constraint.ConstraintLayout>
