--- a/Create_protokol/app/src/main/res/layout/activity_insulation.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation.xml
@@ -6,4 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".InsulationActivity">
 
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginLeft="31dp"
+        android:layout_marginRight="31dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/textbutton"
+        android:text="Создать PDF"
+        android:textColor="@color/fon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
