--- a/Create_protokol/app/src/main/res/layout/activity_main.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_main.xml
@@ -197,7 +197,7 @@
         android:layout_marginStart="16dp"
         android:background="@color/textbutton"
         android:onClick="updatebase"
-        android:text="Обновление данных"
+        android:text="Удаление данных"
         android:textColor="@color/fon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
