--- a/Create_protokol/app/src/main/res/layout/activity_insulation.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation.xml
@@ -78,4 +78,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button9" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="73dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/back" />
+
 </android.support.constraint.ConstraintLayout>
