--- a/Create_protokol/app/src/main/res/layout/activity_insulation2.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation2.xml
@@ -8,6 +8,15 @@
     tools:context=".InsulationActivity2"
     tools:layout_editor_absoluteY="25dp">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="73dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/back" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
