--- a/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
@@ -8,6 +8,7 @@
     tools:context=".InsulationActivity4">
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="368dp"
         android:layout_height="551dp"
         android:layout_marginTop="24dp"
