change_repeatGroup_and_pdf

--- a/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
+++ b/Create_protokol/app/src/main/res/layout/activity_insulation4.xml
@@ -216,7 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Сопротивление: 0,5"
+                android:text="Допустимое сопротивление: 0,5"
                 android:textColor="@color/text"
                 android:textSize="18sp" />
 
