--- a/Create_protokol/app/src/main/res/values/colors.xml
+++ b/Create_protokol/app/src/main/res/values/colors.xml
@@ -3,8 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#1e698d</color>
-    <color name="fon">#e0e8e5</color>
+    <color name="fon">#ebf0f4</color>
     <color name="text">#242e30</color>
     <color name="button">#1e698d</color>
-    <color name="textbutton">#46536c</color>
+    <color name="textbutton">#375f83</color>
+    <color name="actionbar">#4f81b4</color>
+    <color name="uppactionbar">#FF375F83</color>
+    <color name="primary_device_default_dark">#4f81b4</color>
+    <color name="primary_dark_device_default_dark">#000000</color>
+    <color name="accent_device_default_light">#111111</color>
 </resources>
