--- a/Create_protokol/app/src/main/res/values-v21/styles.xml
+++ b/Create_protokol/app/src/main/res/values-v21/styles.xml
@@ -1,1 +1,10 @@
-<resources></resources>
+<resources>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/actionbar</item>
+        <item name="colorPrimaryDark">@color/uppactionbar</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+</resources>
